# ModROS-Modelica

./: LICENSE  ModROSTrial.mo  README.md
Modelica/ModROS/: package.mo
Modelica/ModROS/Blocks/: ROS_Sampler.mo  package.mo
Modelica/ModROS/Blocks/Internal/: ROS_Socket_Call.mo  package.mo
Modelica/ModROS/Examples/: TwoSpringJoystickControl.mo  package.mo
Modelica/ModROS/Resources/: ROS_Socket_Call.c
modros/: CMakeLists.txt  package.xml
modros/doc/: manifest.yaml
modros/doc/html/: annotated.html  classModRos-members.html  classModRos.html  classModros-members.html  classModros.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  graph_legend.html  index-msg.html  index.html  modros__node_8cpp.html  modros__node_8cpp__incl.map  modros__node_8cpp__incl.md5  modros__node_8cpp_source.html
modros/doc/html/msg/: ModComm.html
modros/launch/: rov_tuned.launch  spring_modros.launch  two_springs_modros.launch
modros/msg/: RovProps.msg  TwoSprings.msg
modros/src/: controller_modros.cpp  modros_node.cpp  socket_modros.cpp  teleop_tuned.cpp
modros/src/bluerov2_example/: socket_ROV.cpp  tuned_joy_ROV.cpp
modros/src/spring_example/: controller_modros.cpp  socket_modros.cpp  teleop_spring.cpp  teleop_tuned.cpp
modros_examples/: CMakeLists.txt  package.xml
modros_examples/launch/: rov_tuned.launch  spring_modros.launch
modros_examples/src/spring_example/: controller_spring.cpp
scripts/: ubuntu_setup.sh
